--- a/src/Server/BlazorBoilerplate.Server/appsettings.json
+++ b/src/Server/BlazorBoilerplate.Server/appsettings.json
@@ -1,9 +1,9 @@
 {
   "ConnectionStrings": {
-    "PostgresConnection": "host=localhost;database=BlazorBoilerplate;user id=postgres;password=password123",
+    "PostgresConnection": "host=localhost;database=BlazorBoilerplate;user id=postgres;password=toor",
     // Azure Hosting: Use format below.
     // "DefaultConnection": "Data Source=tcp:<SQL_SERVER_NAME>.database.windows.net,1433;Initial Catalog=<DATABASE_NAME>;Persist Security Info=False;User ID=<ADMIN_USER>;Password=<ADMIN_PASSWORD>;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;MultipleActiveResultSets=True;"
-    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=BlazorBoilerplate;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=localhost;Initial Catalog=BlazorBoilerplate;Trusted_Connection=True;MultipleActiveResultSets=true"
 
   },
 
@@ -60,11 +60,11 @@
     "RequireConfirmedEmail": true,
     "API": {
       "Logging": {
-        "Enabled": false,
+        "Enabled": true,
         "IgnorePaths": [ "/api/account", "/api/admin", "/api/apilog" ]
       },
       "Doc": {
-        "Enabled": false
+        "Enabled": true
       }
     },
     "UsePostgresServer": false,
